# hasalter

./: .releaserc.json  .releaserc.preview.json  BLE_PROTOCOL_ANALYSIS.md  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yml  preview-release.yml  release.yml
custom_components/salter/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  manifest.json  number.py  sensor.py  strings.json
custom_components/salter/translations/: en.json
scripts/: update_version.py
